syntax = "proto3";
package runos_chain.configstore;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "runoschain/configstore/params.proto";
import "runoschain/configstore/config.proto";
// this line is used by starport scaffolding # 1

option go_package = "runos_chain/x/configstore/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/runos_chain/configstore/params";
  }
  // Queries a Config by index.
	rpc Config(QueryGetConfigRequest) returns (QueryGetConfigResponse) {
		option (google.api.http).get = "/runos_chain/configstore/config/{index}";
	}

	// Queries a list of Config items.
	rpc ConfigAll(QueryAllConfigRequest) returns (QueryAllConfigResponse) {
		option (google.api.http).get = "/runos_chain/configstore/config";
	}

// this line is used by starport scaffolding # 2
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryGetConfigRequest {
	  string index = 1;

}

message QueryGetConfigResponse {
	Config config = 1 [(gogoproto.nullable) = false];
}

message QueryAllConfigRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllConfigResponse {
	repeated Config config = 1 [(gogoproto.nullable) = false];
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

// this line is used by starport scaffolding # 3
